finished most styling for mobil, need to fix z-index on certain elements

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -72,12 +72,15 @@ header {
 
 @media (max-width: 576px) {
   header {
-    flex-direction: row;
-    position: fixed;
-    height: 15vh;
-    width: 100vw;
-    top: 70vh;
-    opacity: .95;
+    display: none;
+    // flex-direction: row;
+    // position: fixed;
+    // height: 15vh;
+    // width: 100vw;
+    // bottom: 0vh;
+    // opacity: .95;
+    // z-index: 9;
+    // overflow: hidden;
     .logo {
       display: none;
     }
