--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -156,6 +156,7 @@
       // overflow: hidden;
       .title {
         font-size: 1.25rem;
+        z-index: 8;
       }
       .tiltedBox {
         height: 30vh;
