--- a/src/pages/services.module.scss
+++ b/src/pages/services.module.scss
@@ -106,6 +106,7 @@
       .title {
         font-size: 1.25rem;
         width: 42vw;
+        z-index: 8;
       }
       .subtext {
         font-size: 1rem;
@@ -113,6 +114,7 @@
       }
       .detail {
         top: -12.75vh;
+        z-index: 6;
       }
     }
     .illustration {
